# api_project

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 735f62db6563_cria_tabela_product.py
src/: main.py
src/api/v1/routes/: products.py
src/crud/: products.py
src/db/: engine.py
src/models/: product.py
src/schemas/: product.py
