[tool.poetry]
name = "projeto02"
version = "0.1.0"
description = "Projeto API"
authors = [
    "Anwar Hermuche"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
lint = "ruff check . --fix && ruff format ."
run = "task lint && uvicorn src.main:app --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"